# zcmesh

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  DEMO.md  HACKATHON.md  LICENSE  PROTOCOL.md  README.md  stat-err.txt  stat-out.txt
.github/workflows/: ci.yml
core-engine/: CMakeLists.txt
core-engine/include/: arena.hpp  batch.hpp  frame.hpp  net.hpp  router.hpp  zcm_analyze.hpp
core-engine/src/: arena.cpp  batch.cpp  bench.cpp  capture.cpp  ctl.cpp  frame.cpp  hop.cpp  inspect.cpp  main.cpp  net.cpp  replay.cpp  router.cpp  test_batch.cpp  test_frame.cpp  test_inspect.cpp  test_router.cpp  test_zcm.cpp
fixtures/: README.md  samples.txt
operator-node/: build.gradle.kts  settings.gradle.kts
operator-node/src/main/java/zcmesh/net/: ControlCli.java  ControlClient.java  FrameReceiver.java  StatsClient.java  StatsClientCheck.java  StatsScrape.java  StatsServer.java  StreamResyncCheck.java
operator-node/src/main/java/zcmesh/operator/: OperatorRuntime.java
operator-node/src/main/java/zcmesh/pipeline/: FrameRing.java  MetricsSampler.java  NodeState.java  OperatorSnapshot.java  TelemetryPipeline.java
operator-node/src/main/java/zcmesh/smoke/: HeadlessOperator.java
operator-node/src/main/java/zcmesh/ui/: OperatorApp.java
operator-node/src/main/java/zcmesh/wire/: MeshControl.java  MeshControlCheck.java  WireFrame.java  WireFrameGolden.java  ZcmRoundtrip.java  ZcmWriter.java
scripts/: bench.ps1  ci-operator-e2e.ps1  demo-multinode.ps1  demo-replay.ps1  demo-serial-hop.ps1  demo-serial-hop.sh  demo.ps1  soak-capture-both.ps1  soak-capture-both.sh  soak-capture-tcp.ps1  soak-capture-tcp.sh  soak-failover-cpp.ps1  soak-failover-cpp.sh  soak-failover.ps1  soak-file-source.ps1  soak-file-source.sh  soak-loss.ps1  soak-loss.sh  soak-multiedge.ps1  soak-operator-control.ps1  soak-preferred-hop-cpp.ps1  soak-preferred-hop-cpp.sh  soak-preferred-hop.ps1  soak-replay-cpp.ps1  soak-replay-cpp.sh  soak.ps1
shared/: golden_frame.hex  mesh_control.h  wire_frame.h  zcm_file.h
